<resources>
    <string name="app_name">乐博彩票</string>
    <string name="frament_tab_index0">购彩大厅</string>
    <string name="frament_tab_index1">开奖</string>
    <string name="frament_tab_index2">商城</string>
    <string name="frament_tab_index3">我的</string>
    <string name="app_exit_hint">再按一次退出乐博彩票</string>
    <string name="server_num">010-65617701</string>
    <string name="lotteryhall_sign">乐米签到</string>
    <string name="lotteryhall_info">新闻资讯</string>
    <string name="lotteryhall_game">娱乐场</string>
    <string name="lotteryhall_lottery">最近开奖</string>
    <string name="lotteryhall_jczq">竞彩足球</string>
    <string name="lotteryhall_dlt">大乐透</string>
    <string name="lotteryhall_11x5">11选5</string>
    <string name="lotteryhall_sfc">胜负彩</string>
    <string name="lotteryhall_jqs">进球彩</string>
    <string name="lotteryhall_bqc">半全场</string>
    <string name="lotteryhall_qxc">七星彩</string>
    <string name="lotteryhall_p3">排列3</string>
    <string name="lotteryhall_p5">排列5</string>
    <string name="lotteryhall_other">更多彩种</string>
    <string name="lotteryhall_jclq">竞彩篮球</string>
    <string name="lotteryhall_1czs">一场制胜</string>
    <string name="lotteryhall_2x1">二选一</string>
    <string name="lotteryhall_desc1">单关投注易中奖</string>
    <string name="lotteryhall_desc2">真球迷都在玩</string>
    <string name="lotteryhall_desc3">3米可中1600米</string>
    <string name="lotteryhall_desc4">真球迷都在玩</string>
    <string name="lotteryhall_desc5">10分钟一期</string>
    <string name="lotteryhall_desc6">中奖如此简单</string>
    <string name="lotteryhall_desc7">简单易中奖</string>
    <string name="lotteryhall_desc8">可中10万大奖</string>
    <string name="lotteryhall_desc9">冲击500万大奖</string>
    <string name="lotteryhall_desc10">猜半场，超简单</string>
    <string name="lotteryhall_desc11">进球进球，中奖不愁</string>
    <string name="lotteryhall_desc12">丰富多彩</string>
    <string name="lotteryhall_desc13">优惠多多</string>
    <string name="lotteryhall_desc14">命中一场即可中奖</string>
    <string name="lotteryhall_desc15">让中奖变得更简单</string>
    <string name="lotteryhall_desc16">娱乐无极限 大奖等你拿</string>
    <string name="hall_login_leftword">快乐购彩</string>
    <string name="hall_login">登录</string>
    <string name="hall_register">注册</string>
    <string name="hall_bifen_desc1">比赛直播</string>
    <string name="hall_bifen_desc2">关注比赛情况，实时看比赛</string>
    <string name="hall_jiaodian_desc1">焦点比赛</string>
    <string name="hall_jiaodian_desc2">日联杯</string>
    <string name="hall_jiaodian_desc3">距截止剩：</string>
    <string name="btn_back">返回</string>
    <string name="hall_jiaodian_desc4">预计奖金：</string>
    <string name="hall_jiaodian_desc5">最大奖金：</string>
    <string name="hall_jiaodian_desc6">最高奖金：</string>
    <string name="lottery_monday">周一</string>
    <string name="lottery_tuesday">周二</string>
    <string name="lottery_wednesday">周三</string>
    <string name="lottery_thursday">周四</string>
    <string name="lottery_friday">周五</string>
    <string name="lottery_saturday">周六</string>
    <string name="lottery_sunday">周日</string>
    <string name="victory">胜</string>
    <string name="draw">平</string>
    <string name="negative">负</string>
    <string name="betting">投注</string>
    <string name="betting1">注 </string>
    <string name="price_unit">元</string>
    <string name="lemi_unit">米</string>
    <string name="red_ge">个</string>
    <string name="item_cart_num_money">%1$s注%2$s米</string>
    <string name="cart_add_bei">倍</string>
    <string name="term_num">%1$s期</string>
    <string name="record_tz_detail_qi">%1$s期</string>
    <string name="hall_dlt_refresh">换一注</string>
    <string name="hall_dlt_desc2">共计：</string>
    <string name="hall_lottery_stop">暂停销售</string>
    <string name="hall_lottery_jiajiang">千万加奖</string>
    <string name="hall_lottery_huodong">劲爆活动</string>
    <string name="hall_lottery_kaijiang">今日开奖</string>
    <string name="center_title">个人中心</string>
    <string name="center_recharge">充 值</string>
    <string name="center_outcash">提 现</string>
    <string name="center_tzlist">我的投注</string>
    <string name="center_lemi">乐米明细</string>
    <string name="center_redpkglist">红包明细</string>
    <string name="center_moneylist">资金明细</string>
    <string name="center_info">个人信息</string>
    <string name="center_nodata">未填写</string>
    <string name="center_setpwd">密码修改</string>
    <string name="center_push">消息推送</string>
    <string name="center_voice">声音提示</string>
    <string name="center_more">更多</string>
    <string name="center_help">帮助信息</string>
    <string name="center_check">检查版本</string>
    <string name="center_check_word">当前版本V1.2.0</string>
    <string name="center_about">关于我们</string>
    <string name="center_outlogin">退出登录</string>
    <string name="center_money_mi">乐米：</string>
    <string name="center_buy_red_packet">购买红包</string>
    <string name="center_convert_lemi">乐米兑换</string>
    <string name="center_buy_lemi">购买乐米</string>
    <string name="center_act">最新活动</string>
    <string name="account_time">时间：</string>
    <string name="account_type">类型：</string>
    <string name="account_money">金额：</string>
    <string name="account_balance">余额：</string>
    <string name="account_red_packet">红包</string>
    <string name="account_state">状态：</string>
    <string name="account_mess">备注：</string>
    <string name="tradetype1">全部</string>
    <string name="tradetype2">购彩</string>
    <string name="tradetype3">派奖</string>
    <string name="tradetype4">充值</string>
    <string name="tradetype5">提现</string>
    <string name="account_cash_state1">支付成功</string>
    <string name="account_cash_state2">支付失败</string>
    <string name="account_cash_state3">等待受理</string>
    <string name="tz_title_dg">代购</string>
    <string name="tz_title_zh">追号</string>
    <string name="tz_title_zj">中奖</string>
    <string name="tz_select_all">全部彩种</string>
    <string name="tz_select_football">竞彩足球</string>
    <string name="tz_select_basketball">竞彩篮球</string>
    <string name="tz_select_sfc">胜负彩</string>
    <string name="tz_select_r9">任九场</string>
    <string name="tz_select_jqs">进球彩</string>
    <string name="tz_select_bqc">半全场</string>
    <string name="tz_select_dlt">大乐透</string>
    <string name="tz_select_p3">排列三</string>
    <string name="tz_select_qxc">七星彩</string>
    <string name="tz_select_p5">排列五</string>
    <string name="tz_select_11y">十一运</string>
    <string name="tz_select_11x5">11选5</string>
    <string name="tz_item_mi">米</string>
    <string name="tz_line_time"> 		%1$s&lt;br/>月&lt;br/>%2$s&lt;br/>日</string>
    <string name="tz_detail">投注详情</string>
    <string name="tz_detail_plan_num">方案编号：</string>
    <string name="tz_detail_tz">我投注</string>
    <string name="tz_detail_time">认购时间  </string>
    <string name="tz_detail_plan_content">方案内容</string>
    <string name="tz_detail_zhui_content">追号信息</string>
    <string name="tz_detail_win_num">开奖号码</string>
    <string name="tz_detail_tz_bei">%1$s注%2$s倍</string>
    <string name="page_register">注册</string>
    <string name="register_getcode">获取验证码</string>
    <string name="register_write_phone">请输入手机号</string>
    <string name="register_write_code">请输入验证码</string>
    <string name="register_write_username">4-12个字符或下划线，不能全为数字</string>
    <string name="register_error8">请输入用户名</string>
    <string name="register_write_pwd">请输入6-16位字符</string>
    <string name="register_error6">不能全部为数字</string>
    <string name="register_error7">密码只能为6-16位字母、数字或下划线组合</string>
    <string name="register_error0">手机号输入错误</string>
    <string name="register_error1">请输入密码</string>
    <string name="register_error2">密码6—16位，请重新输入</string>
    <string name="register_error3">验证码不能为空</string>
    <string name="register_error4">密码不能和用户名一样</string>
    <string name="register_error5">验证码输入错误</string>
    <string name="register_again">重新获取</string>
    <string name="register_again_second">%1$ds</string>
    <string name="register_write_card">请输入卡号</string>
    <string name="page_login">登录</string>
    <string name="login_password_error">密码至少需要6位数字或者字母</string>
    <string name="login_password_error1">请输入用户名/手机号</string>
    <string name="login_rem">记住密码</string>
    <string name="login_forgot">忘记密码？</string>
    <string name="login_auto">自动登录</string>
    <string name="page_getbackpwd">忘记密码</string>
    <string name="getbackpwd_submit">提 交</string>
    <string name="getbackpwd_write_pwd">请输入密码</string>
    <string name="getbackpwd_phone_error">输入手机号有误，请重新输入</string>
    <string name="register_getback_pwd">请输入6-16位新密码</string>
    <string name="getbackpwd_error0">请获取验证码</string>
    <string name="page_setpwd">修改密码</string>
    <string name="setpwd_old">旧密码</string>
    <string name="setpwd_new">新密码</string>
    <string name="setpwd_new1">确定密码</string>
    <string name="setpwd_write_old">请输入您的旧密码</string>
    <string name="setpwd_write_new">请输入您的新密码</string>
    <string name="setpwd_write_new1">请确认密码</string>
    <string name="setpwd_explain">如有问题请及时与客服联系：&lt;font color="#f66248">&lt;a href="tel:010-65617701" style="text-decoration:none;">010-65617701&lt;/a>&lt;/font></string>
    <string name="setpwd_error">确认密码与新密码不一致</string>
    <string name="setpwd_error1">新旧密码输入相同，请重新输入</string>
    <string name="page_outlogin">退出登录成功</string>
    <string name="outcash_banknum">绑定的银行卡号：</string>
    <string name="outcash_bankname">开户银行：</string>
    <string name="outcash_allmoney">可提现金额：</string>
    <string name="outcash_realname">持卡人姓名：</string>
    <string name="outcash_money">提款金额：</string>
    <string name="outcash_reminde">		提现说明：&lt;br/>
		1、用户提现申请在当日16点前审核通过后当天到账。&lt;br/>
		2、当日16点后提现审核通过则次日10点前到账。&lt;br/>
		3、用户提现免手续费，日提现次数不可大于3次。&lt;br/>
		4、用户单笔、单日提现额度均参考银行规范执行。&lt;br/>
		5、如有任何疑问请在工作时间（8:00-20:00）联系客服。</string>
    <string name="outcash_reminde1">	    6、客服电话：&lt;font color="#f66248">&lt;a href="tel:010-65617701">010-65617701&lt;/a>&lt;/font></string>
    <string name="outcash_error">最低提现10元，请重新填写提现金额</string>
    <string name="outcash_success">提现成功</string>
    <string name="outcash_failure">提现失败</string>
    <string name="recharge_money">充值金额</string>
    <string name="recharge_alipay_text1">支付宝快捷支付</string>
    <string name="recharge_alipay_text2">支持支付宝金额和银行卡支付</string>
    <string name="recharge_ump_text1">联众优势支付</string>
    <string name="recharge_ump_text2">用科技创造人人乐享的生活方式</string>
    <string name="recharge_upcash_text1">银联充值</string>
    <string name="recharge_upcash_text2">支持信用卡，借记卡充值</string>
    <string name="recharge_submit">立即充值</string>
    <string name="recharge_error">最少充值10元</string>
    <string name="recharge_xinyong">信用卡</string>
    <string name="recharge_jieji">借记卡</string>
    <string name="recharge_num">尾号%1$s</string>
    <string name="recharge_reminde"> 		充值说明：&lt;br/>
        1.单笔充值最低金额10元起 &lt;br/>
		2.网银充值免手续费，充值成功后金额即时到账 &lt;br/>
		3.充值金额仅可用于投注使用，且不可提现 &lt;br/>
		4.如有任何疑问请在工作时间（8:00-20:00）联系客服 </string>
    <string name="recharge_reminde1"> 电话：&lt;font color="#f66248">&lt;a href="tel:010-65617701">010-65617701&lt;/a>&lt;/font></string>
    <string name="page_usermanage">个人信息</string>
    <string name="usermanage_username">  用户名  ：</string>
    <string name="usermanage_phone">  手机号  ：</string>
    <string name="lottery_finish">完成</string>
    <string name="lottery_please_select">请选择</string>
    <string name="lottery_dlt_redDan">红色胆码</string>
    <string name="lottery_dlt_redDan_text">请选1-4个号码</string>
    <string name="lottery_dlt_redTuo">红色拖码</string>
    <string name="lottery_dlt_redTuo_text">请选2-18个号码</string>
    <string name="lottery_dlt_bule_tv1">蓝球</string>
    <string name="lottery_dlt_bule_tv1_text1">至少选1个</string>
    <string name="record_tz_detail_item_qc_xh1">序号</string>
    <string name="record_tz_detail_item_qc_issue">期次</string>
    <string name="record_tz_detail_item_qc_status">状态</string>
    <string name="record_tz_detail_item_qc_win">中奖情况</string>
    <string name="pop_draw">开奖信息</string>
    <string name="pop_zst">走势图表</string>
    <string name="pop_play">玩法介绍</string>
    <string name="btn_clear">清空</string>
</resources>