<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#E9E9E9"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView_tz_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_bg_switch_way"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tz_select_all"
            android:textColor="@color/selector_tv_black_white" />

        <TextView
            android:id="@+id/textView_tz_football"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_bg_switch_way"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tz_select_football"
            android:textColor="@color/selector_tv_black_white" />

        <TextView
            android:id="@+id/textView_tz_sfc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_bg_switch_way"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tz_select_sfc"
            android:textColor="@color/selector_tv_black_white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView_tz_r9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_bg_switch_way"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tz_select_r9"
            android:textColor="@color/selector_tv_black_white" />

        <TextView
            android:id="@+id/textView_tz_jqs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_bg_switch_way"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tz_select_jqs"
            android:textColor="@color/selector_tv_black_white" />

        <TextView
            android:id="@+id/textView_tz_bqc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_bg_switch_way"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tz_select_bqc"
            android:textColor="@color/selector_tv_black_white" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView_tz_dlt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_bg_switch_way"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tz_select_dlt"
            android:textColor="@color/selector_tv_black_white" />

        <TextView
            android:id="@+id/textView_tz_p3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_bg_switch_way"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tz_select_p3"
            android:textColor="@color/selector_tv_black_white" />

        <TextView
            android:id="@+id/textView_tz_qxc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_bg_switch_way"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tz_select_qxc"
            android:textColor="@color/selector_tv_black_white" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView_tz_p5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_bg_switch_way"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tz_select_p5"
            android:textColor="@color/selector_tv_black_white" />

        <TextView
            android:id="@+id/textView_tz_11y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_bg_switch_way"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tz_select_11y"
            android:visibility="invisible"
            android:textColor="@color/selector_tv_black_white" />

        <TextView
            android:id="@+id/textView_tz_11x5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_bg_switch_way"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tz_select_11x5"
            android:visibility="invisible"
            android:textColor="@color/selector_tv_black_white" />
    </LinearLayout>
    <GridView 
        android:id="@+id/id_gridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="3"
        ></GridView>

</LinearLayout>