<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:textColor="@color/color_gray_secondary"
        android:gravity="center_horizontal"
        android:text="@string/record_tz_detail_item_qc_xh1" />

    <TextView
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:textColor="@color/color_gray_secondary"
        android:background="@color/lotterydrawinfo_leve_line" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="6"
        android:textColor="@color/color_gray_secondary"
        android:gravity="center_horizontal"
        android:text="@string/record_tz_detail_item_qc_issue" />

    <TextView
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:textColor="@color/color_gray_secondary"
        android:background="@color/lotterydrawinfo_leve_line" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:textColor="@color/color_gray_secondary"
        android:text="@string/record_tz_detail_item_qc_status" />

    <TextView
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:textColor="@color/color_gray_secondary"
        android:background="@color/lotterydrawinfo_leve_line" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:textColor="@color/color_gray_secondary"
        android:text="@string/record_tz_detail_item_qc_win" />

</LinearLayout>