<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_tab_bg" >

    <TextView
        android:id="@+id/imgView_lotterybid_trash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:textSize="12sp"
        android:drawableTop="@drawable/icon_trash_all"
        android:textColor="@color/hall_yellow"
        android:text="@string/btn_clear"
        android:scaleType="center" />

    <TextView
        android:id="@+id/txtView_lotterybid_match_count"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_margin="5dip"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:text="@string/lottery_please_select"
        android:textColor="@color/color_white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txtView_lotterybid_match_finish"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="10dip"
        android:text="@string/lottery_finish"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/hall_yellow"
        android:background="@drawable/selector_bg_bottom_tz"
        android:textSize="14sp" />
</RelativeLayout>